Import ja.xliff

--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -105,7 +105,7 @@
 "Note列表" = "ノーツリスト";
 
 /* new in 1.3.0 */
-"note数" = "note数";
+"note数" = "ﾉｰﾂ数";
 
 /* (No Comment) */
 "Passion" = "Passion";
@@ -411,7 +411,7 @@
 "卡片" = "カード";
 
 /* No comment provided by engineer. */
-"卡片 Sprite 图" = "カードスプライト";
+"卡片 Sprite 图" = "スプライト画像";
 
 /* new in v1.2.0(7+) */
 "卡片图" = "カード画像";
@@ -473,7 +473,7 @@
 "图片" = "画像";
 
 /* score detail table footer */
-"基础分" = "基本スコア";
+"基础分" = "基礎スコア";
 
 /* (No Comment) */
 "增速(/h)" = "時速 (/h)";
@@ -485,7 +485,7 @@
 "复制" = "コピー";
 
 /* No comment provided by engineer. */
-"大图" = "大圖";
+"大图" = "ｲﾗｽﾄ";
 
 /* 模拟抽卡页面 */
 "天井" = "天井";
@@ -528,7 +528,7 @@
 "小屋加成%" = "ﾙｰﾑｱｲﾃﾑボーナス%";
 
 /* No comment provided by engineer. */
-"属性" = "屬性";
+"属性" = "タイプ";
 
 /* 卡片详情页 */
 "属性排名" = "ステータス順位";
@@ -630,7 +630,7 @@
 "恢复生命" = "ライフ回復";
 
 /* "您的捐赠将用于DereGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。" = "您的捐赠将用于DereGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。"; */
-"您可以通过购买下面的两个虚拟商品来支持本程序。为了更好的App体验，我们决定不在本页添加象征性的广告，因此您的购买不会获得任何虚拟物品或者功能上的扩展。" = "以下いずれかのアプリ内課金アイテムを購入するで私たちを応援することができます。より優れた利用体験を提供するため、このページの広告は廃止されます。よって、あなたの購入行為は機能の拡張や仮想アイテムなどを得られません。";
+"您可以通过购买下面的两个虚拟商品来支持本程序。为了更好的App体验，我们决定不在本页添加象征性的广告，因此您的购买不会获得任何虚拟物品或者功能上的扩展。" = "以下いずれかのアプリ内課金アイテムを購入するで私たちを応援することができます。より優れた利用体験を提供するため、本来このページに表示される広告は撤去されます。よって、あなたの購入行為は機能の拡張や仮想アイテムなどを得られません。";
 
 /* new in 1.4.3 */
 "您无法创建超过 %d 个队伍" = "ユニット数が %d 件の上限を到達しています。";
@@ -1040,7 +1040,7 @@
 "筛选条件" = "絞り込み条件";
 
 /* No comment provided by engineer. */
-"签名" = "簽名";
+"签名" = "ｻｲﾝ";
 
 /* (No Comment) */
 "签名图" = "サイン画像";
@@ -1218,7 +1218,7 @@
 "锁血" = "ダメージガード";
 
 /* 设置页面 */
-"问题反馈" = "問題反饋";
+"问题反馈" = "フィードバック・お問い合わせ";
 
 /* 弹出框标题 */
 "队伍不完整" = "ユニットは未完成です";
