--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -385,9 +385,7 @@
 "协调" = "コーディネイト";
 
 /* (No Comment) */
-"单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级" = "タップ：編集枠を変更
-ダブルタップ：すべてのカードから選択
-長押し：ポテンシャルや特技レベルの編集";
+"单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级" = "タップ：編集枠を変更\nダブルタップ：すべてのカードから選択\n長押し：ポテンシャルや特技レベルの編集";
 
 /* (No Comment) */
 "单属性卡池" = "タイプセレクト";
@@ -1109,6 +1107,9 @@
 "获得额外的 %d%% 的COMBO加成" = "COMBOボーナス %d%% アップ";
 
 /* No comment provided by engineer. */
+"获得额外的 %d%% 的COMBO加成，并使所有GREAT/NICE音符改判为PERFECT" = "COMBOボーナス %d%% アップ、GREAT/NICEをPERFECTにする";
+
+/* No comment provided by engineer. */
 "获得额外的 %d%% 的COMBO加成，并使所有PERFECT音符恢复你 %d 点生命" = "COMBOボーナス %d%% アップ、PERFECTでライフ %d 回復";
 
 /* (No Comment) */
@@ -1161,6 +1162,9 @@
 
 /* 队伍详情页面 */
 "请选择歌曲" = "曲を選んでください";
+
+/* No comment provided by engineer. */
+"调音" = "チューニング";
 
 /* (No Comment) */
 "谱面" = "譜面";
