--- a/Localizations/DereGuide/ja.xcloc/Localized Contents/ja.xliff
+++ b/Localizations/DereGuide/ja.xcloc/Localized Contents/ja.xliff
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?><xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 http://docs.oasis-open.org/xliff/v1.2/os/xliff-core-1.2-strict.xsd">
-  <file original="DereGuide/Base.lproj/Main.storyboard" source-language="zh-Hans" datatype="plaintext" target-language="ja">
+  <file original="DereGuide/Base.lproj/Main.storyboard" source-language="zh-Hans" target-language="ja" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="10.1" build-num="10B61"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="10.2" build-num="10E125"/>
     </header>
     <body>
       <trans-unit id="5Hs-jz-swe.title">
@@ -91,13 +91,13 @@
       </trans-unit>
     </body>
   </file>
-  <file original="DereGuide/zh-Hans.lproj/InfoPlist.strings" source-language="zh-Hans" datatype="plaintext" target-language="ja">
+  <file original="DereGuide/zh-Hans.lproj/InfoPlist.strings" source-language="zh-Hans" target-language="ja" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="10.1" build-num="10B61"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="10.2" build-num="10E125"/>
     </header>
     <body>
       <trans-unit id="CFBundleName">
-        <source>$(PRODUCT_NAME)</source>
+        <source>DereGuide</source>
         <target>DereGuide</target>
         <note>Bundle name</note>
       </trans-unit>
@@ -137,9 +137,9 @@
       </trans-unit>
     </body>
   </file>
-  <file original="DereGuide/zh-Hans.lproj/Localizable.strings" source-language="zh-Hans" datatype="plaintext" target-language="ja">
+  <file original="DereGuide/zh-Hans.lproj/Localizable.strings" source-language="zh-Hans" target-language="ja" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="10.1" build-num="10B61"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="10.2" build-num="10E125"/>
     </header>
     <body>
       <trans-unit id="%@和%@">
@@ -1984,6 +1984,11 @@
         <target>COMBOボーナス %d%% アップ</target>
         <note>技能描述</note>
       </trans-unit>
+      <trans-unit id="获得额外的 %d%% 的COMBO加成，并使所有GREAT/NICE音符改判为PERFECT">
+        <source>获得额外的 %d%% 的COMBO加成，并使所有GREAT/NICE音符改判为PERFECT</source>
+        <target>COMBOボーナス %d%% アップ、GREAT/NICEをPERFECTにする</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
       <trans-unit id="获得额外的 %d%% 的COMBO加成，并使所有PERFECT音符恢复你 %d 点生命">
         <source>获得额外的 %1$d%% 的COMBO加成，并使所有PERFECT音符恢复你 %2$d 点生命</source>
         <target>COMBOボーナス %d%% アップ、PERFECTでライフ %d 回復</target>
@@ -2073,6 +2078,11 @@
         <source>请选择歌曲</source>
         <target>曲を選んでください</target>
         <note>队伍详情页面</note>
+      </trans-unit>
+      <trans-unit id="调音">
+        <source>调音</source>
+        <target>チューニング</target>
+        <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="谱面">
         <source>谱面</source>
@@ -2308,9 +2318,9 @@
       </trans-unit>
     </body>
   </file>
-  <file original="NotificationContent/zh-Hans.lproj/InfoPlist.strings" source-language="zh-Hans" datatype="plaintext" target-language="ja">
+  <file original="NotificationContent/zh-Hans.lproj/InfoPlist.strings" source-language="zh-Hans" target-language="ja" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="10.1" build-num="10B61"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="10.2" build-num="10E125"/>
     </header>
     <body>
       <trans-unit id="CFBundleDisplayName">
@@ -2319,7 +2329,7 @@
         <note>Bundle display name</note>
       </trans-unit>
       <trans-unit id="CFBundleName">
-        <source>$(PRODUCT_NAME)</source>
+        <source>NotificationContent</source>
         <target>DereGuide</target>
         <note>Bundle name</note>
       </trans-unit>
