--- a/Localizations/DereGuide/ja.xcloc/Source Contents/NotificationContent/zh-Hans.lproj/InfoPlist.strings
+++ b/Localizations/DereGuide/ja.xcloc/Source Contents/NotificationContent/zh-Hans.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
 /* Bundle display name */
 "CFBundleDisplayName" = "NotificationContent";
 /* Bundle name */
-"CFBundleName" = "$(PRODUCT_NAME)";
+"CFBundleName" = "NotificationContent";
