Support for 5 free charas in colleague finder

--- a/DereGuide/en.lproj/Localizable.strings
+++ b/DereGuide/en.lproj/Localizable.strings
@@ -1073,6 +1073,9 @@
 /* (No Comment) */
 "自定义计算" = "Custom Calculation";
 
+/* No comment provided by engineer. */
+"自由位置" = "Free Charas";
+
 /* (No Comment) */
 "至少添加一名自己的队长" = "At least add one of my centers";
 
