--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -1073,6 +1073,9 @@
 /* (No Comment) */
 "自定义计算" = "カスタム計算";
 
+/* No comment provided by engineer. */
+"自由位置" = "フリー枠";
+
 /* (No Comment) */
 "至少添加一名自己的队长" = "少なくとも1タイプのアイドルを登録しなければならない";
 
