--- a/DereGuide/zh-Hant.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant.lproj/Localizable.strings
@@ -1073,6 +1073,9 @@
 /* (No Comment) */
 "自定义计算" = "自定義計算";
 
+/* No comment provided by engineer. */
+"自由位置" = "自由位置";
+
 /* (No Comment) */
 "至少添加一名自己的队长" = "至少新增一名自己的隊長";
 
