--- a/Localizations/DereGuide/en.xcloc/Localized Contents/en.xliff
+++ b/Localizations/DereGuide/en.xcloc/Localized Contents/en.xliff
@@ -1927,6 +1927,11 @@
         <target>Custom Calculation</target>
         <note/>
       </trans-unit>
+      <trans-unit id="自由位置">
+        <source>自由位置</source>
+        <target>Free Charas</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
       <trans-unit id="至少添加一名自己的队长">
         <source>至少添加一名自己的队长</source>
         <target>At least add one of my centers</target>
