--- a/Localizations/DereGuide/ja.xcloc/Localized Contents/ja.xliff
+++ b/Localizations/DereGuide/ja.xcloc/Localized Contents/ja.xliff
@@ -1929,6 +1929,11 @@
         <target>カスタム計算</target>
         <note/>
       </trans-unit>
+      <trans-unit id="自由位置">
+        <source>自由位置</source>
+        <target>フリー枠</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
       <trans-unit id="至少添加一名自己的队长">
         <source>至少添加一名自己的队长</source>
         <target>少なくとも1タイプのアイドルを登録しなければならない</target>
