--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -719,6 +719,9 @@
 "排序" = "並べ替え";
 
 /* No comment provided by engineer. */
+"提升%@偶像的%@ %d%%、%@偶像的%@ %d%%。" = "%1$@の%2$@ %3$d%% アップ、%4$@の%5$@ %6$d%% アップ。";
+
+/* No comment provided by engineer. */
 "提升%@偶像的%@ %d%%。" = "%1$@の%2$@ %3$d%% アップ。";
 
 /* 弹出框标题
