--- a/DereGuide/zh-Hant.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant.lproj/Localizable.strings
@@ -719,6 +719,9 @@
 "排序" = "排序";
 
 /* No comment provided by engineer. */
+"提升%@偶像的%@ %d%%、%@偶像的%@ %d%%。" = "提升%1$@偶像的%2$@ %3$d%%、%4$@偶像的%5$@ %6$d%%。";
+
+/* No comment provided by engineer. */
 "提升%@偶像的%@ %d%%。" = "提升%@偶像的%@ %d%%。";
 
 /* 弹出框标题
