Add support to LIVE Carnival event

--- a/DereGuide/zh-Hans.lproj/Localizable.strings
+++ b/DereGuide/zh-Hans.lproj/Localizable.strings
@@ -737,6 +737,9 @@
 /* new in 1.7.4 */
 "灰姑娘之路" = "灰姑娘之路";
 
+/* (No Comment) */
+"嘉年华活动" = "嘉年华活动"
+
 /* new in 1.8 */
 "表格类型" = "表格类型";
 "辅助技能" = "辅助技能";
