--- a/DereGuide/en.lproj/Localizable.strings
+++ b/DereGuide/en.lproj/Localizable.strings
@@ -989,6 +989,9 @@
 "灰姑娘之路" = "Cinderella Road";
 
 /* (No Comment) */
+"嘉年华活动" = "LIVE Carnival"
+
+/* (No Comment) */
 "版权声明" = "Copyright";
 
 /* 通用 */
