Fix syntax error

--- a/DereGuide/en.lproj/Localizable.strings
+++ b/DereGuide/en.lproj/Localizable.strings
@@ -989,7 +989,7 @@
 "灰姑娘之路" = "Cinderella Road";
 
 /* (No Comment) */
-"嘉年华活动" = "LIVE Carnival"
+"嘉年华活动" = "LIVE Carnival";
 
 /* (No Comment) */
 "版权声明" = "Copyright";
