Support the 3rd reward card

--- a/DereGuide/en.lproj/Localizable.strings
+++ b/DereGuide/en.lproj/Localizable.strings
@@ -166,6 +166,9 @@
 "下位" = "Lower Card";
 
 /* (No Comment) */
+"中位" = "Middle Card";
+
+/* (No Comment) */
 "不再公开您之前已经发布的信息" = "Make the profile you post previously unlisted";
 
 /* -∞ 或 +∞ */
